{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 23,
  "lineage": "abe6127a-7873-f02c-3ab7-7bb4b380f1f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server1_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090fa75af13c156b4",
            "arn": "arn:aws:ec2:us-east-1:420658571942:instance/i-04205d34111a8832b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04205d34111a8832b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b884bda1da68c2b2",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00409df6e48925677",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d3b96170abef24f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006f51c867afcfa00",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3b96170abef24f8"
            ]
          },
          "dependencies": [
            "aws_security_group.publicsg_P18",
            "aws_subnet.public_subnet1a_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server2_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f409bae3775dc8e5",
            "arn": "arn:aws:ec2:us-east-1:420658571942:instance/i-082192e01c854483c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082192e01c854483c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010d58c254e203755",
            "private_dns": "ip-10-0-2-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021811dabf648eb73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d3b96170abef24f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0a4c03dedfb46dd",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3b96170abef24f8"
            ]
          },
          "dependencies": [
            "aws_security_group.publicsg_P18",
            "aws_subnet.public_subnet1b_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:internet-gateway/igw-0e6f8b69c0d1db5ea",
            "id": "igw-0e6f8b69c0d1db5ea",
            "owner_id": "420658571942",
            "tags": {
              "Name": "internet_gateway_p18"
            },
            "tags_all": {
              "Name": "internet_gateway_p18"
            },
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_KP18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:loadbalancer/app/lb-KP18/383258a9b63df9bd",
            "arn_suffix": "app/lb-KP18/383258a9b63df9bd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-KP18-1399374244.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:420658571942:loadbalancer/app/lb-KP18/383258a9b63df9bd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-KP18",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d3b96170abef24f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006f51c867afcfa00"
              },
              {
                "subnet_id": "subnet-0f0a4c03dedfb46dd"
              }
            ],
            "subnets": [
              "subnet-006f51c867afcfa00",
              "subnet-0f0a4c03dedfb46dd"
            ],
            "tags": {
              "Environment": "KP18"
            },
            "tags_all": {
              "Environment": "KP18"
            },
            "vpc_id": "vpc-08b31155e660c9a70",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.publicsg_P18",
            "aws_subnet.public_subnet1a_P18",
            "aws_subnet.public_subnet1b_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:listener/app/lb-KP18/383258a9b63df9bd/2c280b4852854887",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420658571942:listener/app/lb-KP18/383258a9b63df9bd/2c280b4852854887",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:loadbalancer/app/lb-KP18/383258a9b63df9bd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb_KP18",
            "aws_lb_target_group.lb_target",
            "aws_security_group.publicsg_P18",
            "aws_subnet.public_subnet1a_P18",
            "aws_subnet.public_subnet1b_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "P18_target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/project-lb-tg/7f6aaaa4f0133445",
            "arn_suffix": "targetgroup/project-lb-tg/7f6aaaa4f0133445",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/project-lb-tg/7f6aaaa4f0133445",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "project-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4",
            "arn_suffix": "targetgroup/target/d537d30be96039b4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/var/www/html/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "acquire_targets_mki",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4-20230908152700918400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4",
            "target_id": "i-04205d34111a8832b"
          },
          "dependencies": [
            "aws_instance.web_server1_P18",
            "aws_lb_target_group.lb_target",
            "aws_security_group.publicsg_P18",
            "aws_subnet.public_subnet1a_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "acquire_targets_mkii",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4-20230908152700747600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:420658571942:targetgroup/target/d537d30be96039b4",
            "target_id": "i-082192e01c854483c"
          },
          "dependencies": [
            "aws_instance.web_server2_P18",
            "aws_lb_target_group.lb_target",
            "aws_security_group.publicsg_P18",
            "aws_subnet.public_subnet1b_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:route-table/rtb-08fe0db071f99a6ba",
            "id": "rtb-08fe0db071f99a6ba",
            "owner_id": "420658571942",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6f8b69c0d1db5ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_P18"
            },
            "tags_all": {
              "Name": "route_table_P18"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association1_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027c315d8d649777c",
            "route_table_id": "rtb-08fe0db071f99a6ba",
            "subnet_id": "subnet-006f51c867afcfa00"
          },
          "dependencies": [
            "aws_internet_gateway.ig_P18",
            "aws_route_table.route_table_P18",
            "aws_subnet.public_subnet1a_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association2_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f5ec5c9e00e5679",
            "route_table_id": "rtb-08fe0db071f99a6ba",
            "subnet_id": "subnet-0f0a4c03dedfb46dd"
          },
          "dependencies": [
            "aws_internet_gateway.ig_P18",
            "aws_route_table.route_table_P18",
            "aws_subnet.public_subnet1b_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:security-group/sg-08afa7bc63bf7f237",
            "description": "security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08afa7bc63bf7f237",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb_sg_P18",
            "name_prefix": "",
            "owner_id": "420658571942",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg_P18"
            },
            "tags_all": {
              "Name": "alb_sg_P18"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:security-group/sg-0fb57695abfdeb8f6",
            "description": "allow traffic only from web_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb57695abfdeb8f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3b96170abef24f8"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3b96170abef24f8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "420658571942",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicsg_P18",
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:security-group/sg-0d3b96170abef24f8",
            "description": "Allow traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3b96170abef24f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "publicsg_P18",
            "name_prefix": "",
            "owner_id": "420658571942",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC_KP18"
            },
            "tags_all": {
              "Name": "VPC_KP18"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:subnet/subnet-0515e1f96a5348bba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515e1f96a5348bba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420658571942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 1a_P18"
            },
            "tags_all": {
              "Name": "private subnet 1a_P18"
            },
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:subnet/subnet-0ee5411b759ee16e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee5411b759ee16e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420658571942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 1b_P18"
            },
            "tags_all": {
              "Name": "private subnet 1b_P18"
            },
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1a_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:subnet/subnet-006f51c867afcfa00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006f51c867afcfa00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420658571942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet 1a_P18"
            },
            "tags_all": {
              "Name": "public subnet 1a_P18"
            },
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1b_P18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:subnet/subnet-0f0a4c03dedfb46dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0a4c03dedfb46dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420658571942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet 1b_P18"
            },
            "tags_all": {
              "Name": "public subnet 1b_P18"
            },
            "vpc_id": "vpc-08b31155e660c9a70"
          },
          "dependencies": [
            "aws_vpc.TF_KP18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF_KP18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420658571942:vpc/vpc-08b31155e660c9a70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d49c574a7703e45",
            "default_route_table_id": "rtb-03d88f74914cbc6d4",
            "default_security_group_id": "sg-0ffd4d024ffad0de2",
            "dhcp_options_id": "dopt-029926e3be72a9963",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b31155e660c9a70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d88f74914cbc6d4",
            "owner_id": "420658571942",
            "tags": {
              "Name": "TF_KP18"
            },
            "tags_all": {
              "Name": "TF_KP18"
            }
          }
        }
      ]
    }
  ]
}